--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,10 +13,15 @@
     "moment": "^2.24.0",
     "vue": "^2.6.10",
     "vue-router": "^3.1.2",
+    "vue-session": "^1.0.0",
     "vuejs-logger": "1.5.3",
     "vuetify": "^2.0.0"
   },
   "devDependencies": {
+    "@fortawesome/fontawesome-free": "^5.12.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.26",
+    "@fortawesome/free-solid-svg-icons": "^5.12.0",
+    "@fortawesome/vue-fontawesome": "^0.1.9",
     "@vue/cli-plugin-babel": "^3.10.0",
     "@vue/cli-plugin-eslint": "^3.10.0",
     "@vue/cli-service": "^3.10.0",
